# Infographix

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  PROGRESS.md  QUICKSTART.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
backend/: __init__.py
backend/api/: __init__.py  config.py  dependencies.py  main.py  routes.py  schemas.py
backend/archetypes/: __init__.py  base.py  before_after.py  bullet_list.py  card_grid.py  chevron.py  comparison.py  cycle.py  funnel.py  gauge.py  hub_spoke.py  icon_grid.py  marketecture.py  matrix.py  org_chart.py  pictogram.py  pipeline.py  process_flow.py  progress_bar.py  pyramid.py  roadmap.py  staircase.py  swot.py  target.py  timeline.py  tree_diagram.py  venn.py  versus.py
backend/auth/: __init__.py  brute_force.py  password.py  tokens.py  totp.py
backend/billing/: __init__.py  plans.py  stripe_client.py  usage.py
backend/components/: __init__.py  base.py  detector.py  llm_detector.py  parameters.py  registry.py
backend/constraints/: __init__.py  alignment.py  engine.py  rules.py  snapping.py  spacing.py  text_fitting.py
backend/creativity/: __init__.py  constraints.py  sampling.py  variation_engine.py
backend/data/: icons.json  industry_vocabularies.json  styles.json
backend/db/: __init__.py  base.py  cache.py  models.py
backend/dsl/: __init__.py  schema.py
backend/engine/: __init__.py  archetype_learner.py  archetype_registry.py  archetype_resolver.py  archetype_rules.py  brand_engine.py  connector_router.py  custom_shape_renderer.py  data_models.py  grid_layout.py  icon_library.py  layout_engine.py  llm_reasoning.py  multi_diagram_composer.py  overlay_system.py  positioned.py  pptx_renderer.py  semantic_mapper.py  shape_effects.py  shape_learning.py  svg_renderer.py  text_measure.py  units.py  universal_archetype.py  (+2 more)
data/: validation_feedback.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ml/: __init__.py  config.py
(+202 files in other folders)
